# https---github.com-hassan3301-daily_agent

./: pyproject.toml
daily_agent/: agent.py  prompt.py  tools.py
daily_agent/sub_agents/postgres/: agent.py  prompts.py  tools.py
daily_agent/utils/: date_ranges.py
deployment/: local.py  remote.py
